Adding connectivity to mysql database using hibernate

--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -10,6 +10,11 @@
     <dependencies>
 
         <dependency>
+            <groupId>javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.12.1.GA</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>4.2.5.RELEASE</version>
